src/objects/Call__c.object
<CustomObject>
    <description>CORE - Object to store information on Calls made to prospects and clients</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>CORE - Name of the account call is be</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Call_End_Time__c</fullName>
        <defaultValue>NOW() + 0.0104175</defaultValue>
        <description>CORE - Name of the account call is being made in regards to</description>
        <inlineHelpText>If left blank the call end time will default to 1 hour from the call start time</inlineHelpText>
        <label>Call End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <description>CORE - Text area to take notes regarding call</description>
        <label>Call Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Objective__c</fullName>
        <description>CORE - Picklist of high level objective of call</description>
        <label>Call Objective</label>
        <picklist>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/solution conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product demonstration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training/set-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Start_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>CORE - Start time of call</description>
        <label>Call Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Call_End_Time__c</fullName>
        <description>CORE - End time of call</description>
        <label>Next Call End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Call_Notes__c</fullName>
        <description>CORE - Notes to use for next call</description>
        <label>Next Call Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Call_Objective__c</fullName>
        <description>CORE - High level objective of next call to be made following from current call</description>
        <label>Next Call Objective</label>
        <picklist>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/solution conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product demonstration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training/set-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Call_Start_Time__c</fullName>
        <description>CORE - Start time of next call</description>
        <label>Next Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Other_Call_Objective__c</fullName>
        <description>CORE - Must be filled in if other is selected in call objective</description>
        <label>Other Call Objective</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Next_Call_Objective__c</fullName>
        <description>CORE - Must be filled in if other next call objective is filled in</description>
        <label>Other Next Call Objective</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CORE - Hidden field populated via work-flow as calls are master detail to accounts thereby not having an OwnerId field which is required.</description>
        <inlineHelpText>If left blank this field will default to the current user</inlineHelpText>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Call_Notes__c</fullName>
        <description>CORE - notes to remind user what to discuss during call</description>
        <label>Pre Call Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>CORE - Scheduled or completed</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Call_Attendees__c</fullName>
        <description>CORE - Roll up summary field used to total the number of call attendees for use in validation rule</description>
        <label>Total Call Attendees</label>
        <summaryForeignKey>CallAttendee__c.Call__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>CORE -</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Face to Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web/Video Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Call</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Call_Start_Time__c</columns>
        <columns>Call_End_Time__c</columns>
        <columns>Status__c</columns>
        <columns>OwnerId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Call</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CallObjectiveMandatoryToComplete</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Call_Objective__c,&apos;&apos;),ISPICKVAL(Status__c ,&apos;Completed&apos;))</errorConditionFormula>
        <errorDisplayField>Call_Objective__c</errorDisplayField>
        <errorMessage>You must choose a call objective in order to close the call</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Be_More_Than_14_days</fullName>
        <active>true</active>
        <errorConditionFormula>OR ((Call_End_Time__c - Call_Start_Time__c  &gt; 14), ( Next_Call_End_Time__c - Next_Call_Start_Time__c &gt; 14))</errorConditionFormula>
        <errorMessage>A Call cannot be longer than 14 days</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OtherCallObjectiveRequiredIfSelected</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Call_Objective__c, &apos;Other&apos;),
ISBLANK(Other_Call_Objective__c))</errorConditionFormula>
        <errorDisplayField>Other_Call_Objective__c</errorDisplayField>
        <errorMessage>If Other is selected Other Call Objective is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OtherNextCallObjectiveRequiredIfSelected</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Next_Call_Objective__c, &apos;Other&apos;), 
ISBLANK(Other_Next_Call_Objective__c))</errorConditionFormula>
        <errorDisplayField>Other_Next_Call_Objective__c</errorDisplayField>
        <errorMessage>If Other is selected Other Next Call Objective is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequiresMinOneAttendee</fullName>
        <active>true</active>
        <description>Throw an error message at the top of the screen when the status field is changed to completed when there is less than one recorded attendee</description>
        <errorConditionFormula>AND(ISCHANGED(Status__c), ISPICKVAL(Status__c, &apos;Completed&apos;),  Total_Call_Attendees__c &lt; 1)</errorConditionFormula>
        <errorMessage>You must have at least one attendee linked to complete a call</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartTimeGreaterThanEnd</fullName>
        <active>true</active>
        <description>Start Time must be before the End Time</description>
        <errorConditionFormula>Call_End_Time__c &lt;= Call_Start_Time__c</errorConditionFormula>
        <errorDisplayField>Call_Start_Time__c</errorDisplayField>
        <errorMessage>Start Time must be before the End Time</errorMessage>
    </validationRules>
</CustomObject>